# QuantumFaultSim

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: CURRENT_STATUS.md  QUICKSTART.md  ROADMAP.md  TECHNICAL_REPORT.md
quantumfaultsim/: __init__.py  circuits.py  cli.py  config.py  decoder.py  logger.py  parallel.py  plots.py  sampler.py  threshold.py
scripts/: benchmark_workers.py  run_phase1_verify.py  run_threshold_sweep.py
tests/: test_circuits.py  test_decoder.py  test_integration.py
