[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantumfaultsim"
version = "0.1.0"
description = "HPC-Accelerated Surface Code Threshold Simulator"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "stim>=1.13",
    "pymatching>=2.2",
    "sinter>=1.13",
    "numpy>=1.24,<2.0",
    "matplotlib>=3.7",
    "click>=8.1",
    "tqdm>=4.66",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov", "black", "ruff"]

[project.scripts]
quantumfaultsim = "quantumfaultsim.cli:cli"

[tool.setuptools.packages.find]
include = ["quantumfaultsim*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
